--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "author": "Angel",
   "license": "MIT",
+  "homepage": "http://acm92.github.io/indecision-app",
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack serve"
+    "dev-server": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@babel/cli": "^7.15.7",
@@ -32,5 +35,8 @@
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
